[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-climate-guard"
version = "2.0.0"
description = "Quantum Climate Risk & Carbon Credit Optimizer — ESG Intelligence Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "QuantumClimateGuard Contributors"}
]
keywords = [
    "climate", "risk", "esg", "quantum", "carbon", "tcfd",
    "vqe", "qaoa", "qml", "sustainability", "portfolio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
quantum = ["pyqpanda3>=0.3.2"]
gui = ["customtkinter>=5.0.0"]
all = ["pyqpanda3>=0.3.2", "customtkinter>=5.0.0"]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
quantum-climate-guard = "quantum_climate_guard.__main__:main"
qcg = "quantum_climate_guard.__main__:main"

[project.urls]
Homepage = "https://github.com/quantumclimateguard/QuantumClimateGuard"
Documentation = "https://github.com/quantumclimateguard/QuantumClimateGuard#readme"
Issues = "https://github.com/quantumclimateguard/QuantumClimateGuard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantum_climate_guard = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
